# conduit

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  cliff.toml
.github/: FUNDING.yml
crates/conduit-api/: Cargo.toml
crates/conduit-api/src/: main.rs
crates/conduit-api/src/routes/: connections.rs  mod.rs
crates/conduit-core/: Cargo.toml
crates/conduit-core/src/: connection.rs  lib.rs  serial.rs  tcp.rs  udp.rs
crates/conduit-headless/: Cargo.toml
crates/conduit-headless/src/: main.rs  state.rs
crates/conduit-headless/src/routes/: connections.rs  mod.rs  ports.rs  signals.rs  stream.rs
crates/conduit-tauri/: Cargo.toml  tauri.conf.json
crates/conduit-tauri/icons/: icon.icns
crates/conduit-tauri/src/: lib.rs  main.rs
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/lib/: api.ts
frontend/src/lib/components/: MacroBar.svelte  NewConnection.svelte  SendBar.svelte  SettingsPanel.svelte  StatusBar.svelte  TabBar.svelte  TerminalView.svelte  ThemeToggle.svelte
frontend/src/lib/stores/: connections.svelte.ts  macros.svelte.ts  profiles.svelte.ts  theme.svelte.ts
