[package]
name = "conduit-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "conduit-api"
path = "src/main.rs"

[lib]
name = "conduit_api"
path = "src/lib.rs"

[dependencies]
conduit-core = { path = "../conduit-core" }
tokio.workspace = true
axum.workspace = true
tower-http = { version = "0.6", features = ["cors", "fs"] }
dotenvy = "0.15"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bytes.workspace = true
