[package]
name = "conduit-headless"
version.workspace = true
edition.workspace = true

[[bin]]
name = "conduit-headless"
path = "src/main.rs"

[dependencies]
conduit-core = { path = "../conduit-core" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
