[package]
name = "conduit-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "conduit_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
conduit-core = { path = "../conduit-core" }
tauri = { version = "2", features = [] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
