[package]
name = "conduit-tauri"
version.workspace = true
edition.workspace = true

[lib]
name = "conduit_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
conduit-headless = { path = "../conduit-headless" }
tauri = { version = "2", features = [] }
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
