[package]
name = "conduit-tauri"
version.workspace = true
edition.workspace = true

[[bin]]
name = "conduit"
path = "src/main.rs"

[lib]
name = "conduit_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
conduit-api = { path = "../conduit-api" }
tauri = { version = "2", features = [] }
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
